--- a/src/businesses.css
+++ b/src/businesses.css
@@ -1,3 +1,6 @@
+body, html, * {
+  font-family: 'Vazir', sans-serif !important;
+}
 body {
   font-family: 'Vazir', sans-serif;
   background: #f9f9f9;
